# telecom-cvm-intelligence

./: .env.example  .gitignore  DATA_DICTIONARY.md  Dockerfile  METHODOLOGY.md  README.md  monitor.py  pyproject.toml  requirements.txt  scratch_test.py  train.py
data/campaigns/opportunity_bases/: bundle_upsell_20260705.csv  churn_retention_20260705.csv  loyalty_reward_20260705.csv  reactivation_20260705.csv  voice_topup_20260705.csv
data/processed/: features.csv  rfm_scores.csv
data/raw/: customer_events.csv
models/: churn_model.joblib  clv_model.joblib  preprocessor.joblib  propensity_bundle.joblib  propensity_reactivation.joblib  propensity_topup.joblib  segmentation_model.joblib
reports/dashboards/: cvm_dashboard.html
spark/: feature_pipeline.py
src/cvm/: config.py
src/cvm/api/: dependencies.py  main.py  middleware.py
src/cvm/api/routes/: campaigns.py  customers.py  health.py  models.py
src/cvm/campaign/: opportunity_base.py
src/cvm/data/: generator.py  loader.py  preprocessor.py
src/cvm/features/: behavioural.py  rfm.py
src/cvm/models/: base_model.py  churn_predictor.py  clv_predictor.py  propensity.py  segmentation.py
src/cvm/monitoring/: alert_engine.py  drift_detector.py
src/cvm/visualization/: dashboard.py
tests/: conftest.py  test_api.py  test_campaign.py  test_features.py  test_models.py
